Update from participations

--- a/player_management/src/main/resources/application.properties
+++ b/player_management/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 Logs SQL
 spring.jpa.show-sql=true
-player.manager.api.url=http://localhost:8081
+server.port=8081
